--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/zeutyx/xyra-bot#readme",
   "dependencies": {
     "discord-akairo": "^8.0.0",
-    "discord.js": "^12.1.1"
+    "discord.js": "^12.1.1",
+    "dotenv": "^8.2.0"
   }
 }
