--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
