--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev-start": "nodemon index.js",
+    "start": "node -r esm index.js",
+    "dev-start": "nodemon -r esm index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +21,8 @@
   "dependencies": {
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.1.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "esm": "^3.2.25"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
