--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
