--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/zeutyx/xyra-bot#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
