--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.28",
