--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@zuzak/owo": "^1.6.0",
     "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
