--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.28",
     "numeral": "^2.0.6",
-    "soap": "^0.31.0"
+    "soap": "^0.31.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
