--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@zuzak/owo": "^1.6.0",
     "axios": "^0.19.2",
+    "chalk": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.1.1",
@@ -31,8 +32,7 @@
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.28",
     "numeral": "^2.0.6",
-    "soap": "^0.31.0",
-    "winston": "^3.2.1"
+    "soap": "^0.31.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
