--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.28",
+    "nekos.life": "^2.0.5",
     "numeral": "^2.0.6",
     "pg": "^8.0.0",
     "sequelize": "^5.21.5",
