--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.28",
     "nekos.life": "^2.0.5",
+    "novelcovid": "^1.1.2",
     "numeral": "^2.0.6",
     "pg": "^8.0.0",
     "sequelize": "^5.21.5",
