--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r esm index.js",
-    "dev-start": "nodemon -r esm index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:pm2": "pm2 start scripts/start.config.js",
+    "start-dev:pm2": "pm2 start scripts/start-dev.config.js"
   },
   "repository": {
     "type": "git",
