--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r esm index.js",
-    "start:pm2": "pm2 start scripts/start.config.js",
+    "start:pm2": "pm2-runtime start scripts/start.config.js",
     "start-dev:pm2": "pm2 start scripts/start-dev.config.js"
   },
   "repository": {
