--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "numeral": "^2.0.6",
     "pg": "^8.0.3",
     "sequelize": "^5.21.7",
-    "soap": "^0.31.0"
+    "soap": "^0.31.0",
+    "tiktok-scraper": "^1.1.11"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
