chore: version bump

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xyra-bot",
-  "version": "1.0.0",
+  "version": "2020.10.9b1",
   "description": "",
   "main": "index.js",
   "scripts": {
