--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nekos.life": "^2.0.7",
     "novelcovid": "^3.0.0",
     "numeral": "^2.0.6",
+    "parse-duration": "^0.4.4",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "soap": "^0.35.0",
