--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "soap": "^0.35.0",
+    "table": "^6.0.7",
     "tiktok-scraper": "^1.4.4"
   },
   "devDependencies": {
