--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "discord-akairo": "^8.1.0",
     "discord.js": "^12.5.0",
     "dotenv": "^8.2.0",
+    "easy-table": "^1.1.1",
     "esm": "^3.2.25",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
@@ -39,7 +40,6 @@
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "soap": "^0.35.0",
-    "table": "^6.0.7",
     "tiktok-scraper": "^1.4.4"
   },
   "devDependencies": {
