--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cheerio": "^1.0.0-rc.3",
     "discord-akairo": "^8.1.0",
     "discord.js": "^12.5.0",
+    "discord.js-pagination": "^1.0.3",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "lodash": "^4.17.20",
